@@ -10,10 +10,100 @@
 </center>
 <pre>
 
-Note, the changes for the last OFFICIAL release start with release
+Note, the changes for the last STABLE release start with release
 <A HREF="#2.2.4">2.2.4</A>.
 
-Changes in beta release 2.3.16 (not released yet)
+Changes in beta release 2.3.22 (not released yet)
+
+* Sped up command execution and startup.
+
+* Improved handling of windows that set the "input focus" hint to "false".
+
+Changes in beta release 2.3.21 (September 2000)
+
+* Module configuration syntax now accepts a delimeter, colon and optional
+  spaces; the old syntax is supported as usual:
+    *FvwmIconBoxMaxIconSize 48x48
+    *FvwmIconBox: MaxIconSize 48x48
+
+* SendToModule can accept aliases too.
+
+* New option StrokeWidth for StrokeFunc.
+
+* GNOME support is now "on" by default.
+
+Changes in beta release 2.3.20 (July 2000)
+
+* KillModule supports an optional alias parameter as given in Module.
+    Module FvwmModule Alias
+    KillModule FvwmModule Alias
+
+Changes in beta release 2.3.19 (June 2000)
+
+* New command UpdateStyles forces an immediate style update, even
+  within a complex function.
+
+* Implemented '$*' in complex functions.  This works like in a
+  shell and is replaced by all arguments of a function.
+
+* Implemented several new parameters:
+    $[desk.width], $[desk.height], $[vp.x], $[vp.y], $[vp.width], $[vp.height],
+    $[w.x], $[w.y], $[w.width], $[w.height], $[screen], $[&lt;env-var&gt;]
+
+Changes in beta release 2.3.18 (May 2000)
+
+* Renamed the MovedButton3 contition to PlacedByButton3.
+
+* Removed FlipTransient and DontFlipTransient styles (they never
+  worked anyway).
+
+* Conditions can be separated by commas.
+
+* Removed MoveSmoothness command.
+
+Changes in beta release 2.3.17 (May 2000)
+
+* The commands Refresh and RefreshWindow apply all outstanding visual
+  changes of a window.
+
+* New options GrowUp, GrowDown, GrowLeft, GrowRight to the Maximize
+  command.
+
+* New command ResizeMove combined Move and Resize commands.
+
+* New options "keep" to Move command to leave either coordinate unchanged.
+
+* New options "bottomright" and "br" to Resize command.
+
+* Resize command can take negative arguments.  A "keep" argument leaves
+  the corresponding dimension untouched.
+
+* New condition "MovedButton3" that is true if the last interactive
+  Move command was finished by pressing mouse button 3.
+
+* Mouse button 3 can no longer be used to cancel interactive window
+  movement.
+
+* $FVWM_USERHOME used to set the fvwm user directory renamed to $FVWM_USERDIR.
+
+* The default fvwm user directory is now $HOME/.fvwm, not $HOME,
+  the fvwm user directory is now created if needed.
+
+* It is suggested to put all personal fvwm files to $HOME/.fvwm; to simulate
+  the old fvwm behaviour, export FVWM_USERDIR=$HOME .
+
+* Instalating fvwm goodies is now to share/fvwm (FVWM_DATADIR), not etc/fvwm.
+
+* fvwm-config utility can be used for querying fvwm instalation.
+
+Changes in beta release 2.3.16 (April 2000)
+
+* Wait command supports quoted window names.
+
+* Fixed the annoying rxvt text selection problem that was present
+  since 2.3.10.
+
+* New style option BorderColorset and HilightBorderColorset.
 
 Changes in beta release 2.3.15 (February 2000)
 
@@ -1480,7 +1570,7 @@ pl1 to pl2
 </pre>
     <hr>
 <!-- This file automatically generated by txt2html.sh
-     on Wed Mar 29 22:08:53 EST 2000 -->
+     on Thu Sep  7 09:06:23 EDT 2000 -->
   </body>
 </html>
 
