@@ -1,3 +1,7 @@
+2000-09-07  Dan Espen  <dane@mk.telcordia.com>
+
+	* generated/FAQ.html,generated/NEWS.html: regenerated.
+
 2000-09-04  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* download.html: increased version number to 2.3.21
